--- a/workout.html
+++ b/workout.html
@@ -376,7 +376,7 @@
                       <div class="diff-trigger">
                         <div class="counter-btn" v-if="StatusCode200 == true &&this.min == 0" style="cursor: default !important;">
                         </div>
-                        <div class="counter-btn" v-on:click="ChangeDifficulty(0, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true &&this.min !== 0">
+                        <div class="counter-btn" v-on:click="ChangeAmrapDifficulty(0, this.$refs.video, this.$refs.min, title)" v-if="StatusCode200 == true && this.min !== 0">
                           <div class="counter-arrow left"></div>
                         </div>
                         <div class="counter-num">
@@ -384,7 +384,7 @@
                           <div class="num divider">/</div>
                           <div class="num limit" ref="max" v-if="StatusCode200 == true">{{exerciseMax}}</div>
                         </div>
-                        <div class="counter-btn" v-on:click="ChangeDifficulty(1, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && this.min + 1 !== exerciseMax">
+                        <div class="counter-btn" v-on:click="ChangeAmrapDifficulty(1, this.$refs.video, this.$refs.min, title)" v-if="StatusCode200 == true && this.min + 1 !== exerciseMax">
                           <div class="counter-arrow right"></div>
                         </div>
                         <div class="counter-btn" v-if="StatusCode200 == true && this.min + 1 == exerciseMax" style="cursor: default !important;">
