--- a/program-hub.html
+++ b/program-hub.html
@@ -467,13 +467,13 @@ overflow-x: hidden;
       </div>
     </div>
   </div>
-  <div class="loading-state-v2" style="background-color: white;" ref="loader">
+  <!--<div class="loading-state-v2" style="background-color: white;" ref="loader">
     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
       <defs>
       </defs>
       <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
     </svg>
-  </div>
+  </div>-->
   <div id="programLoading" class="loading_program hide_program_loader">
     <div class="filter_loader ver">
       <div class="program_loading_text">Loading your program<br></div>
