--- a/program-hub.html
+++ b/program-hub.html
@@ -88,79 +88,6 @@
   
 </head>
 <body>
-  <div class="program_loader_styles w-embed">
-    <style>
-  .hide_program_loader { 
-  	visibility: hidden;
-  }
-</style>
-  </div>
-  <div class="global-app-css w-embed">
-    <!-- <style>
-[w-el~="load_app"] { 
-	opacity: 1;
-}
-.capsule-body { 
-	display: flex !important;
-}
-.app-slide-image { 
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.app-hero-image { 
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.capsule-image-block { 
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-a, button { 
-	user-select: none !important;
-}
-.styles-classes ul li { 
-	padding-top: 10px;
-  padding-bottom: 10px;
-}
-	a { 
-  	text-decoration: none;
-    color: inherit;
-  }
-.w-form-formradioinput--inputType-custom.w--redirected-focus {
-    box-shadow: none !important;
-}
-.blog-image { 
-	object-fit: cover;
-}
-/* Slider Dots Styles Override */
-.w-slider-dot {
-  width: 8px;
-  height: 8px;
-  border-top-left-radius: 1px;
-  border-top-right-radius: 1px;
-  border-bottom-left-radius: 1px;
-  border-bottom-right-radius: 1px;
-  background-color: hsla(0, 0.00%, 100.00%, 0.50);
-}
-.w-slider-dot:active {
-  background-color: hsla(0, 0.00%, 100.00%, 1.00);
-}
-.diff-trigger {
-   -webkit-user-select: none; /* Safari */
-  user-select: none;
-}
-.toggle-button-trigger {
-  -webkit-user-select: none; /* Safari */
-  user-select: none;
-}
-/*.app {
-overflow-x: hidden;
-}*/
-</style> -->
-  </div>
   <div class="header">
     <a href="#" class="header-nav-button back-button-on w-inline-block">
       <div class="nav-back-icon"></div>
@@ -352,15 +279,15 @@ overflow-x: hidden;
     </div>
   </div>
   <div id="app" w-el="load_app" class="app">
-    <div w-el="program_hub_page" class="app-main app-base">
+   <div w-el="program_hub_page" class="app-main app-base">
       <div class="app-head workout">
-        <div class="app-block fixed app-hero-image"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt="" v-bind:srcset="`${ProgramImage[0].url}`" class="full_hero">
+        <div class="app-block fixed app-hero-image"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt="" v-bind:srcset="`${User.Program.Image}`" class="full_hero">
           <div class="app-block fixed overlay">
             <div class="app-block-content">
               <div class="app-block-header circle">
                 <div class="app-completion-circle hide">
                   <div class="completion-text">
-                    <div w-el="percent" class="main-heading-style-8">75%</div>
+                    <div w-el="percent" class="main-heading-style-8">0%</div>
                     <div class="main-sub-heading-style-5">Complete</div>
                   </div>
                 </div>
@@ -369,12 +296,12 @@ overflow-x: hidden;
               <div class="info-block auto-margin">
                 <div class="info-block-header">
                   <div class="split-dynamic-text center">
-                    <div w-el="workout_week" class="generic-text-style-2 margin-right-split-dnyamic-text">{{User.Program_Weeks_Amount[0]}}</div>
+                    <div w-el="workout_week" class="generic-text-style-2 margin-right-split-dnyamic-text">{{User.SessionAmount}}</div>
                     <div class="generic-text-style-2 center-align">week program</div>
                   </div>
                   <div w-el="program_title" class="main-heading-style-6 center-align">Loading...</div>
                 </div>
-                <a id="startNextWorkout" v-bind:href="`/workout-overview.html?workout=${nextWorkoutID}`" data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb1072" class="button-style-1 w-button" style="display: none;">Start my next workout</a>
+                <a id="startNextWorkout" v-bind:href="`/workout-overview.html?workout=${User.NextWorkout}`" data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb1072" class="button-style-1 w-button">Start my next workout</a>
                 <div class="line"></div>
               </div>
             </div>
@@ -391,40 +318,37 @@ overflow-x: hidden;
               </div>
             </div>
             <div style="display:flex;opacity:1" class="content tab-1">
-              <div v-bind:class="{current_week : number == UserWeek }" v-for="(week, number) in Program" v-bind:key="week" class="accordion style-1 weeks">
+              <div v-bind:class="{current_week : number == User.CurrentWeek }" v-for="(week, number) in User.Program.Weeks" v-bind:key="week" class="accordion style-1 weeks">
                 <div data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb1080" class="accordion-header week_interaction">
                   <div class="accordion-header-text">
                     <div class="accordion-header-top-content">
                       <h2 class="main-heading-style-1 week">Week {{number + 1}}</h2>
                       <div class="accordion-header-arrow">
-                        <div v-bind:class="{closed : number !== UserWeek }" class="accordion-arrow-icon opened"></div>
+                        <div v-bind:class="{closed : number !== User.CurrentWeek }" class="accordion-arrow-icon opened"></div>
                       </div>
                     </div>
                     <div class="split-dynamic-text">
-                      <div class="generic-text-style-1 complete-amount" v-if="CompletedWorkouts.length > 1">{{CompletedWorkouts[number].completedCount}}</div>
-                      <div class="generic-text-style-1 complete-amount"v-else>0</div>
+                      <div class="generic-text-style-1 complete-amount">{{week.CompletedAmount}}</div>
                       <div class="generic-text-style-1">/</div>
-                      <div class="generic-text-style-1 week-1-length">{{User.Q7[0]}}</div>
+                      <div class="generic-text-style-1 week-1-length">{{User.SessionAmount}}</div>
                       <div class="generic-text-style-1 left-complete-margin">Complete</div>
                     </div>
                   </div>
                 </div>
-                <div v-bind:class="{hide_accordion : number !== UserWeek }" class="accordion-body style-1 sessions">
-                  <a v-bind:href="`/workout-overview.html?program=${User.Add_Program[0]}&week=week-${number + 1}&workout=${week.Workouts[index]}`" v-for="(workout, index) in week.Workouts.slice(0, SessionAmount)" v-bind:key="workout" v-bind:class="{disabled: number > UserWeek }" href="#" class="capsule-body style-1 workouts w-inline-block" data-sal="slide-up" data-sal-duration="1000">
-                    <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${week.Image[index].url}`" alt="" class="full_thumbnail"></div>
+                <div v-bind:class="{hide_accordion : number !== User.CurrentWeek }" class="accordion-body style-1 sessions">
+                  <a v-bind:href="`/workout-overview.html?program=${User.Program.ID}&week=week-${number + 1}&workout=${workout.ID}`" v-for="(workout, index) in week.Workouts" v-bind:key="workout" v-bind:class="{disabled: number > User.CurrentWeek }" href="#" class="capsule-body style-1 workouts w-inline-block" data-sal="slide-up" data-sal-duration="1000">
+                    <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${workout.Image}`" alt="" class="full_thumbnail"></div>
                     <div class="capsule-header-content">
                       <div class="capsule-header-text">
-                        <h2 class="main-heading-style-1 workout-title">{{week.Workout_Names[index]}}</h2>
+                        <h2 class="main-heading-style-1 workout-title">{{workout.Name}}</h2>
                         <div class="split-dynamic-text">
-                          <div class="generic-text-style-1">{{week.Type[index]}}</div>
+                          <div class="generic-text-style-1">{{workout.Type}}</div>
                           <div class="generic-text-style-1 left-right-margin"> | </div>
-                          <div class="generic-text-style-1">{{week.Time[index]}}</div>
+                          <div class="generic-text-style-1">{{workout.Time}}</div>
                         </div>
                         <div w-el="complete_filter_week" class="generic-text-style-1 complete-week">HIIT Workout</div>
                       </div>
-                      <div v-bind:class="User.Completed_Workout_ID !== undefined && !startedNone
-                      && CompletedWorkouts[number].completeIndices[index] === true
-                      ? 'completed' : 'not_completed'" class="completed-icon"></div>
+                      <div v-bind:class="{'completed' : workout.Completed}" class="completed-icon"></div>
                     </div>
                   </a>
                 </div>
@@ -448,18 +372,18 @@ overflow-x: hidden;
                   </div>
                 </div>
                 <div class="accordion-body style-1">
-                  <a v-bind:href="`/recovery-overview.html?recovery=${Recovery.ID}`" v-for="(Recovery, index) in Recoveries" v-bind:key="Recovery" href="#" class="capsule-body style-1 workouts w-inline-block">
-                    <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" v-bind:srcset="`${Recovery.Image[0].url}`" alt="" class="full_thumbnail"></div>
+                  <a v-bind:href="`/recovery-overview.html?recovery=${recovery.ID}`" v-for="(recovery, index) in User.Recoveries" v-bind:key="recovery" href="#" class="capsule-body style-1 workouts w-inline-block" data-sal="slide-up" data-sal-duration="1000">
+                    <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" v-bind:srcset="`${recovery.Image}`" alt="" class="full_thumbnail"></div>
                     <div class="capsule-header-content">
                       <div class="capsule-header-text">
-                        <h2 class="main-heading-style-1 workout-title">{{Recovery.Name}}</h2>
+                        <h2 class="main-heading-style-1 workout-title">{{recovery.Name}}</h2>
                         <div class="split-dynamic-text">
-                          <div class="generic-text-style-1">{{Recovery.Type}}</div>
+                          <div class="generic-text-style-1">{{recovery.Type}}</div>
                           <div class="generic-text-style-1 left-right-margin"> | </div>
-                          <div class="generic-text-style-1">{{Recovery.Time}}</div>
+                          <div class="generic-text-style-1">{{recovery.Time}}</div>
                         </div>
                       </div>
-                      <div v-bind:class="User.Completed_Recovery_Record_ID !== undefined &amp;&amp; User.Completed_Recovery_Record_ID.some((id) =&gt; Recovery.ID.includes(id)) ? &#x27;completed&#x27; : &#x27;not_completed&#x27;" class="completed-icon"></div>
+                      <div v-bind:class="{'completed' : recovery.Completed}" class="completed-icon"></div>
                     </div>
                   </a>
                 </div>
@@ -497,27 +421,22 @@ overflow-x: hidden;
         </div>
       </div>
     </div>
-  </div>
-  <div class="loading-state-v2" style="background-color: white;" ref="loader">
-    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
-      <defs>
-      </defs>
-      <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
-    </svg>
-  </div>
-  <div id="programLoading" class="loading_program hide_program_loader">
-    <div class="filter_loader ver">
-      <div class="program_loading_text">Loading your program<br></div>
-      <div class="program_loading_text style-2">Please wait</div>
+    <div class="loading-state-v2" style="background-color: white;" v-if="!Loaded" ref="loader">
+      <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
+        <defs>
+        </defs>
+        <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
+      </svg>
     </div>
   </div>
+</div>
   <script src="sal/sal.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/gh/tigrr/circle-progress/dist/circle-progress.min.js" type="text/javascript"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
-  <script src="js/user/userAuth.js" type="text/javascript"></script>
+  <!--<script src="js/user/userAuth.js" type="text/javascript"></script>-->
   <script src="js/programs/program-hub.js" type="text/javascript"></script>
 </body>
 </html>
